<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/lugares"
        app:showAsAction="never" />
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/action_todos"
            android:orderInCategory="100"
            android:title="@string/todos"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_danli"
            android:orderInCategory="100"
            android:title="@string/danli"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_paraiso"
            android:orderInCategory="100"
            android:title="@string/elparaiso"
            app:showAsAction="never" />

    </group>


</menu>
