<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="unah.proyecto.aeo.aplicacionagendaelectronicaoriental.clasesJAVASheyli.PerfilDeLaOrganizacion"
    tools:showIn="@layout/app_bar_perfil_de_la_organizacion"
    >

    <LinearLayout
      android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/aeo"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenOrganizacion"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <ImageView
                android:id="@+id/nombreO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/negocio24dp" />

            <TextView
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/nombreO"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/nombreO"
                android:text="hola"
                android:textColor="#000"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/imagetelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imagen_organizacion"
                android:layout_below="@+id/nombreO"
                android:layout_marginTop="35dp"
                app:srcCompat="@drawable/telefono" />

            <TextView
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/imagetelefono"
                android:layout_alignStart="@+id/n"
                android:layout_below="@+id/n"
                android:layout_marginTop="35dp"
                android:text="@string/telefono"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/imagencelular"
                android:layout_toEndOf="@+id/direccion"
                android:text="hola"
                android:textColor="#000"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imagencelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imagetelefono"
                android:layout_below="@+id/imagetelefono"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/celular" />

            <TextView
                android:id="@+id/celular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imagencelular"
                android:layout_alignStart="@+id/telefono"
                android:layout_marginTop="10dp"
                android:text="@string/celular"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tcelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/celular"
                android:layout_below="@id/t"
                android:layout_marginLeft="3dp"
                android:layout_toEndOf="@+id/celular"
                android:text="hola"
                android:textColor="#000"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imagencelular"
                android:layout_below="@+id/imagencelular"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageemail"
                android:layout_alignStart="@+id/celular"
                android:layout_below="@+id/celular"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/email"
                android:layout_below="@+id/tcelular"
                android:layout_marginLeft="3dp"
                android:layout_toEndOf="@+id/email"
                android:text="hola"
                android:textColor="#000"
                android:textSize="15sp" />


            <ImageView
                android:id="@+id/imagedireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imageemail"
                android:layout_below="@+id/imageemail"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/direccion" />

            <TextView
                android:id="@+id/direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imagedireccion"
                android:layout_alignStart="@+id/email"
                android:layout_below="@+id/email"
                android:layout_marginTop="10dp"
                android:text="@string/direccion"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imagedireccion"
                android:layout_below="@+id/imagedireccion"
                android:layout_marginTop="5dp"
                android:text="hola"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/d"
                android:layout_marginTop="30dp"
                android:text="zxcvbnmlkjhgfdsaqwertyuiop"
                android:textColor="#000"
                android:textSize="15sp" />
        </RelativeLayout>
</ScrollView>
</LinearLayout>
